# E3_project_draft

./: E3_MASTER_WORKFLOW_AND_PYTHON_APP_HANDOVER_v0_1_0.md  RELEASE_VALIDATION_v0_7_2.md  REPOSITORY_FILE_GUIDE.md  tmp.txt
e3_discovery_engine/: .coverage  .gitignore  .gitignore:  CHANGELOG.md  PACKAGE_MANIFEST.tsv  README.md  Snakefile  TEST_RESULTS.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_e3_discovery_engine_full_onekp_cluster.sh  run_tests.sh  run_workflow.sh
e3_discovery_engine/config/: config.cluster.full_onekp.example.yaml  config.example.legacy_reproduction.yaml  config.example.production.yaml  config.five_proteome_nomask.local.yaml  config.five_proteome_run.local.yaml  config.five_proteome_tantan.local.yaml  config.yaml  five_proteome_samples.local.tsv  full_onekp_cluster.example.samples.tsv  samples.production.example.tsv  samples.tsv
e3_discovery_engine/docs/: BENCHMARK_PROTOCOL.md  CODE_DOCUMENTATION_STANDARD.md  DATA_DICTIONARY.md  DATA_SOURCES.md  EXAMPLE_QUERIES.sql  LEGACY_AUDIT_EVIDENCE_REGISTER.md  LEGACY_METHOD_LIMITATIONS.md  METHODS.md  OPERATIONS_RUNBOOK.md  PACKAGE_FILE_REGISTER.md  RELEASE_CHECKLIST.md  RESOURCE_MONITORING.md  SCIENTIFIC_INTERPRETATION.md  SLURM_FULL_ONEKP_RUNBOOK.md  TESTING.md
e3_discovery_engine/legacy_reference/: README.md  Snakefile.inherited  config.inherited.json  convert_seqs_to_parquet.py  create_duckdb.py  generate_config_file.py  retrieve_clusters.py  samples.inherited.json
e3_discovery_engine/scripts/: check_full_onekp_slurm.sh  run_e3_scaling_and_full.sh  run_five_proteome_masking_comparison.sh  run_release_checks.sh  slurm_full_onekp_job.sh  submit_full_onekp_slurm.sh
e3_discovery_engine/tests/: FUNCTION_TEST_MATRIX.tsv
e3_end_to_end_workflow/: .gitignore  README.md  RELEASE_NOTES_v0_2_0.md  RELEASE_NOTES_v0_3_0.md  RELEASE_NOTES_v0_4_0.md  RELEASE_NOTES_v0_4_1.md  RELEASE_NOTES_v0_5_0.md  RELEASE_NOTES_v0_5_1.md  RELEASE_NOTES_v0_6_0.md  RELEASE_NOTES_v0_7_0.md  RELEASE_NOTES_v0_7_1.md  RELEASE_NOTES_v0_7_2.md  TEST_RESULTS_v0_3_0.txt  TEST_RESULTS_v0_4_0.txt  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_e3_end_to_end.sh  run_tests.sh  submit_e3_end_to_end.sh
e3_end_to_end_workflow/config/: five_proteome_orthofinder.cluster.yaml  grant_aligned_reuse.cluster.template.yaml  known_e3_seeds.template.tsv  production.cluster.template.yaml  proteomes.template.tsv  shortlist.template.tsv  synthetic.yaml  synthetic_seeds.tsv  synthetic_shortlist.tsv
e3_end_to_end_workflow/config_bk/: five_proteome_orthofinder.cluster.yaml  grant_aligned_reuse.cluster.yaml  known_e3_seed_evidence.template.tsv  production.cluster.template.yaml  synthetic.yaml  synthetic_proteomes.tsv  synthetic_seeds.tsv
e3_end_to_end_workflow/data/: README.md  known_e3_seeds.provenance.tsv
e3_end_to_end_workflow/data_bk/: README.md  e3_domain_catalogue.tsv  known_e3_seed_evidence.provenance.tsv
e3_end_to_end_workflow/docs/: ARCHITECTURE.md  BENCHMARKING.md  EVIDENCE_MODES_AND_SCALING.md  REPORTING.md  TEST_TRACEABILITY.tsv
e3_end_to_end_workflow/tests/: conftest.py  test_benchmarking.py  test_cli.py  test_config.py  test_control.py  test_domain_annotations.py  test_environment.py  test_full_scientific_pipeline.py  test_io_utils.py  test_manifests.py  test_reporting.py  test_runner_e2e.py  test_scientific_adapters.py  test_scientific_utilities.py  test_seed_evidence.py
e3_end_to_end_workflow/workflow/: Snakefile
e3_ligandability_pipeline/: .gitignore  BUILD_RESULTS_v0_1_0.txt  BUILD_RESULTS_v0_1_1.txt  COMPILE_CHECK_v0_1_0.txt  COVERAGE_RESULTS_v0_1_0.txt  COVERAGE_RESULTS_v0_1_1.txt  DIST_CHECKSUMS_v0_1_0.sha256  DIST_CHECKSUMS_v0_1_1.sha256  MANIFEST.in  README.md  RELEASE_NOTES_v0_1_0.md  RELEASE_NOTES_v0_1_1.md  RELEASE_VALIDATION_SUMMARY_v0_1_0.txt  RELEASE_VALIDATION_SUMMARY_v0_1_1.txt  TEST_RESULTS_v0_1_0.txt  TEST_RESULTS_v0_1_1.txt  TWINE_CHECK_v0_1_0.txt  TWINE_CHECK_v0_1_1.txt  WHEEL_VALIDATION_v0_1_0.txt  WHEEL_VALIDATION_v0_1_1.txt  environment.cluster.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_coverage.sh  run_e3_ligandability.sh  run_legacy_regression.sh  run_tests.sh
e3_ligandability_pipeline/config/: config.cluster.example.yaml
e3_ligandability_pipeline/docs/: CLUSTER_RUNBOOK.md  LEGACY_AUDIT_AND_RERUN_DECISION.md  METHODS_AND_SCIENTIFIC_LIMITS.md  OUTPUT_SCHEMA.md  TEST_TRACEABILITY.tsv
e3_ligandability_pipeline/e3ligandability/: __init__.py  alphafold.py  cli.py  config.py  fpocket.py  io_utils.py  logging_utils.py  mapping.py  models.py  outputs.py  p2rank.py  pipeline.py  provenance.py  qc.py  regression.py  structure.py  tools.py
e3_ligandability_pipeline/examples/: accessions.local_models.example.tsv
e3_ligandability_pipeline/legacy_reference/: LEGACY_FILE_CHECKSUMS.tsv  README.md  download_models.py  fpocket_inherited_environment.yaml  get_pLDDT_scores.py  get_pocket_pLDDT_scores.py  plot_pLDDT_dist.py  run_p2rank_rescore.sh
e3_ligandability_pipeline/scripts/: e3_ligandability.py  slurm_e3_ligandability_job.sh  submit_e3_ligandability_slurm.sh
e3_orthology_integration/: .gitignore  README.md  RELEASE_NOTES_v0_1_3.md  RELEASE_NOTES_v0_1_4.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_e3_orthology_integration.sh  run_tests.sh  submit_e3_orthology_integration.sh
e3_python_app/: .gitignore  README.md  RELEASE_NOTES_v0_2_0.md  environment.yml  pyproject.toml  requirements.txt  run_e3_python_app.sh  run_tests.sh
e3_python_app/config/: app.env.example
e3_source_to_parquet_seed/: .coverage  COVERAGE_RESULTS_v0_4_0.txt  README.md  RELEASE_NOTES_v0_4_0.md  TEST_RESULTS.txt  TEST_RESULTS_v0_4_0.txt  pyproject.toml  requirements.txt  run_coverage.sh  run_e3_candidate_evidence.sh  run_e3_seed_pipeline.sh  run_e3_source_to_parquet_seed_full_cluster.sh  run_tests.sh
e3_structural_alignment/: .gitignore  README.md  RELEASE_NOTES_v0_1_0.md  RELEASE_NOTES_v0_1_1.md  RELEASE_NOTES_v0_1_2.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_e3_structural_alignment.sh  run_tests.sh
(+316 files in other folders)
