[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e3-orthology-integration"
version = "0.1.0"
description = "Audited OrthoFinder identifier reconciliation for the ARIA plant E3 project"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Internal-Research-Use"
authors = [
  {name = "Peter Thorpe and collaborators"}
]
dependencies = [
  "pyarrow>=18,<25",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.6,<8",
  "pycodestyle>=2.12,<3",
  "pydocstyle>=6.3,<7",
  "ruff>=0.15,<1",
]

[project.scripts]
e3-orthology-integration = "e3orthology.cli:main"

[tool.setuptools]
packages = ["e3orthology"]

[tool.setuptools.package-data]
e3orthology = ["data/*.tsv", "data/*.yaml"]

[tool.coverage.run]
branch = true
source = ["e3orthology"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.pycodestyle]
max-line-length = 100
exclude = ".git,__pycache__,build,dist"

[tool.pydocstyle]
convention = "google"
add-ignore = "D104,D105,D107,D202"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
