[project]
name = "e3-source-to-parquet-seed"
version = "0.3.1"
description = "Source-first E3 PROTAC inherited data audit and Parquet conversion utilities"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0",
  "openpyxl>=3.1",
  "duckdb>=1.0",
]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
select = ["E", "F", "W", "I"]
